# capacita-mais

./: CapacitaMais_Consultas.sql  CapacitaMais_Insercoes.sql  CapacitaMais_Tabelas.sql  README.md  aluno_insert.py  aluno_select.py  app.py  cadastro.py  env_example  pyproject.toml  query.py  scripts.py
