[tool.poetry]
name = "Capacita-Plus-Application"
version = "0.1.0"
description = ""
authors = ["Lucas Ciziks"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.23.2"
oracledb = "^1.3.2"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
